--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <link rel="stylesheet" href="./css/style.css">
  <!-- font awesome -->
  <script src="https://kit.fontawesome.com/1674f9e07c.js" crossorigin="anonymous"></script>
+ <title>Task 2</title>
 </head>
 <body>
  <main>
